# todos

./: Cargo.toml  README.md  config.toml  db.sqlite  diesel.toml
assets/settings/: settings.json
migrations/2025-01-31-112933_create_posts/: down.sql
migrations/2025-02-15-035120_create_labels/: down.sql  up.sql
migrations/2025-02-15-035123_create_items/: down.sql  up.sql
migrations/2025-02-15-035127_create_projects/: up.sql
migrations/2025-02-15-035156_create_sections/: down.sql  up.sql
migrations/2025-02-15-035200_create_reminders/: down.sql  up.sql
migrations/2025-02-15-035516_create_queue/: down.sql  up.sql
migrations/2025-02-15-035547_create_curtempids/: down.sql  up.sql
migrations/2025-02-15-035619_create_attachments/: down.sql  up.sql
migrations/2025-02-15-035644_create_oevents/: down.sql  up.sql
migrations/2025-02-15-035711_create_sources/: down.sql  up.sql
src/: constants.rs  main.rs  utils.rs1
src/enums/: color.rs  filter_item_type.rs  filter_type.rs  item_priority.rs  item_type.rs  label_picker_type.rs  loading_button_type.rs  mod.rs  new_task_position.rs  notification_style.rs  object_event_key_type.rs  object_event_type.rs  object_type.rs  pane_type.rs  picker_type.rs  project_icon_style.rs  project_view_style.rs  recurrency_end_type.rs  recurrency_type.rs  reminder_type.rs  source_type.rs
src/models/: mod.rs
src/models/post/: imp.rs
src/models/todo/: mod.rs  schema.rs
src/models/user/: schema.rs
src/objects/: attachment.rs  base.rs  baseObject.rs  base_object.rs  color.rs  database.rs  due_date.rs  item.rs  label.rs  mod.rs  project.rs  queue.rs  reminder.rs  schema.rs  section.rs  source.rs
src/objects/filters/: all_items.rs  anytime.rs  completed.rs  filter_item.rs  labels.rs  mod.rs  pinboard.rs  priority.rs  repeating.rs  scheduled.rs  today.rs  tomorrow.rs  unlabeled.rs
src/objects/item/: imp.rs  mod.rs
src/objects/label/: imp.rs  mod.rs
src/objects/project/: imp.rs  mod.rs
src/objects/reminder/: imp.rs  mod.rs
src/objects/section/: imp.rs  mod.rs
src/objects/source/: imp.rs  mod.rs
src/services/: database.rs  mod.rs  settings.rs  store.rs
src/services/models/: mod.rs  schema.rs
src/services/models/post/: mod.rs
src/services/models/sources/: mod.rs
src/services/models/todo/: imp.rs  mod.rs
src/services/models/user/: imp.rs  mod.rs
src/utils/: datetime.rs  mod.rs  util.rs
