[package]
name = "todos"
version = "0.1.0"
edition = "2024"

[dependencies]
# libsqlite3-sys = { version = "0.32.0", features = ["bundled"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# axum = { version = "0.8.1", features = ["json"] }
# axum-macros = "0.5.0"
anyhow = "1.0.97"
diesel = { version = "2.2.8", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
once_cell = "1.21.1"
chrono-humanize = "0.2"
uuid = { version = "1.16.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
config = "0.15.11" # 用于读取配置文件
# gimli={version="0.31.1"}
# serde-wasm-bindgen = "0.6.5"
# wasm-bindgen = "0.2.99"
# wasm-bindgen-futures = "0.4.49"
derive_builder = "0.20.2"
strum = { version = "0.27.1", features = ["derive"] }
rand = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.19.0"
diesel_migrations = { version = "2.2.0" }


# [[bin]]
# name = "show_posts"
# path = "src/bin/show_posts.rs"
# doc = false

# [[bin]]
# name = "write_post"
# path = "src/bin/write_post.rs"
# doc = false
# [[bin]]
# name = "get_post"
# path = "src/bin/get_post.rs"
# doc = false

# [[bin]]
# name = "publish_post"
# path = "src/bin/publish_post.rs"
# doc = false

# [[bin]]
# name = "delete_post"
# path = "src/bin/delete_post.rs"
# doc = false

[lib]
doc = false
# crate-type = ["cdylib"]


[profile.dev]
debug = true
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
